[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/walibi-holland-webfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ScenaHelp.gd" type="Script" id=2]
[ext_resource path="res://assets/buttons/but_start.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=3]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[node name="ScenaHelp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 1926.0
margin_bottom = 1083.0
color = Color( 0, 0.0862745, 0.27451, 0.247059 )

[node name="Label4" type="Label" parent="."]
margin_left = 6.0
margin_top = -1.0
margin_right = 1910.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = "Funcionamento do Jogo"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.148
anchor_top = 0.335
anchor_right = 0.881
anchor_bottom = 0.693
margin_left = 0.839996
margin_top = -104.8
margin_right = 0.47998
margin_bottom = -104.44
custom_fonts/font = SubResource( 3 )
text = "Quem joga primeiro:

Pode ser decido por par ou Ã­mpar,
cara ou coroa, pedra/papel/tesoura.
O ganhador define uma palavra de 4
letras com as cartas do baralho e inicia o jogo."
align = 3
valign = 1

[node name="Sair" type="TouchScreenButton" parent="."]
position = Vector2( 1823, 7 )
scale = Vector2( 0.242894, 1 )
normal = ExtResource( 3 )

[node name="proximo" type="TouchScreenButton" parent="."]
position = Vector2( 1713, 955 )
scale = Vector2( 0.459948, 1 )
normal = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 1718.0
margin_top = 953.0
margin_right = 1884.0
margin_bottom = 1048.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "->"
align = 1
valign = 1
uppercase = true

[node name="Label3" type="Label" parent="."]
margin_left = 1832.0
margin_top = 18.0
margin_right = 1905.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "X"
align = 1
valign = 1

[node name="anterior" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 50, 952 )
scale = Vector2( 0.44186, 1 )
normal = ExtResource( 3 )

[node name="Label5" type="Label" parent="."]
visible = false
anchor_left = 0.028
anchor_top = 0.879
anchor_right = 0.117
anchor_bottom = 0.965
margin_left = 0.239998
margin_top = -0.320068
margin_right = -0.640015
margin_bottom = -0.200073
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "<-"
align = 1
valign = 1

[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="proximo" to="." method="_on_proximo_pressed"]
[connection signal="pressed" from="anterior" to="." method="_on_anterior_pressed"]
